noyon : users create and edit issue solve

--- a/hr/templates/hr/employee/edit.html
+++ b/hr/templates/hr/employee/edit.html
@@ -1204,6 +1204,7 @@
                 confirmation_date : $("#dateOfConfirmation").val(),
                 employee_category : $("#employeeCategory").val(),
                 provision_month : $("#provision_month").val(),
+                gross : $("#gross").val(),
                 income_tax : $("#income_tax").prop('checked'),
                 tiffin_bill : $("#tiffin_bill").prop('checked'),
                 transport_facility : $("#transportOff").prop('checked'),
