--- a/hr/templates/hr/salary/branch_wise_details.html
+++ b/hr/templates/hr/salary/branch_wise_details.html
@@ -3,7 +3,7 @@
 {% load general_filters %}
 {% load humanize %}
 
-{% block page_title %}Branch Wise Salary Summary Report{% endblock %}
+{% block page_title %}Salary Report Branch Wise - Bank{% endblock %}
 
 {% block add_css %}
     <style>
@@ -18,12 +18,12 @@
   <div class="card-header">
     <div class="row">
       <div class="col-md-12 align-self-center">
-        <h4 class="text-themecolor mb-0">Branch Wise Salary Summary Report</h4>
+        <h4 class="text-themecolor mb-0">Salary Report Branch Wise - Bank</h4>
       </div>
     </div>
   </div>
   <div class="card-body pt-0 custom-color rounded-lg p-3 custom-rl">
-    <form class="floating-labels mt-2" method="post" id="report_form" action="{% url "hr:get_branch_wise_salary_summary_report" %}">
+    <form class="floating-labels mt-2" method="post" id="report_form" action="{% url "hr:get_branch_wise_details_report" %}">
       {% csrf_token %}
       <input type="hidden" id="report_type" name="report_type" value="pdf" />
       <div class="row">
@@ -55,7 +55,6 @@
               <label for="company">Branch</label>
               <select class="form-control select2" name="company" id="company" data-title="Branch" required />
                   <option value="" disabled selected></option>
-                  <option value="all">All</option>
                   {% for company in companies %}
                   <option value="{{company.id}}">{{company.name}}</option>
                   {% endfor %}
@@ -73,7 +72,6 @@
               </select>
           </div>
         </div>
-        {% comment %}
         <div class="col-md">
           <div class="form-group mb-0">
               <label for="employee_category">Employee Category</label>
@@ -84,8 +82,7 @@
                   {% endfor %}
               </select>
           </div>
-        </div> 
-        {% endcomment %} 
+        </div>  
         <div class="col-md-3">
           <div class="row">
             <div class="col-md">
@@ -108,21 +105,33 @@
       </div>   
     </form>
     <div class="table-responsive">
-        <table class="table table-striped table-bordered custom-table table-nowrap mb-0 mt-3 hide" id="salary-table">
-            <thead>
-              <tr class="text-center">
-                <th class="">Branch Code & Name</th>
-                <th class="">Cash Amount (A)</th>
-                <th class="">Bank Salary (B)</th>
-                <th class="">Deduct (C)</th>
-                <th class="">Contributory Provident Fund(D)</th>
-                <th class="">Gratuity (E)</th>
-                <th class="">B+..+E</th>
-                <th class="">Remarks</th>
-              </tr>
-            </thead>
-            <tbody></tbody>
-        </table>
+          <table class="table table-striped table-bordered custom-table table-nowrap mb-0 mt-3 hide" id="salary-table">
+               <thead>
+                    <tr class="text-center">
+                         <th class="">SL No.</th>
+                         <th class="">E. ID</th>
+                         <th class="">Name</th>
+                         <th class="">Designation</th>
+                         <th class="">Joining Date</th>
+                         <th class="">Permanent Date</th>
+                         <th class="">Status</th>
+                         <th class="">Bank A/C No</th>
+                         <th class="">Fixed Salary</th>
+                         <th class="">Basic</th>
+                         <th class="">House Rent(60%)</th>
+                         <th class="">Medical Allowance(40%)</th>
+                         <th class="">Deduct/Arear</th>
+                         <th class="">Gross Salary</th>
+                         <th class="">Profident Fund(10%)</th>
+                         <th class="">Staff Security</th>
+                         <th class="">Staff Saving</th>
+                         <th class="">PF Loan</th>
+                         <th class="">Total Deduct</th>
+                         <th class="">Net Payment</th>
+                    </tr>
+               </thead>
+               <tbody></tbody>
+          </table>
     </div>      
   </div>
 </div>
@@ -145,7 +154,7 @@
         if (year && month && company){
           $.ajax({
             type : "POST", async : false,
-            url  : '{% url "hr:get_branch_wise_salary_summary_report" %}',
+            url  : '{% url "hr:get_branch_wise_details_report" %}',
             data : { department : $("#department").val(),
               year: year, month : month, company : company,
               employee_category : $("#employee_category").val(),
@@ -153,7 +162,7 @@
               $("#salary-table tbody").empty().html(data['report_data']);
               if($('#salary-table tbody tr').length && excel_button){ 
                 TableToExcel.convert(document.getElementById("salary-table"), {
-                  name: `branch_wise_salary_summary_report.xlsx`, sheet: { name: 'Branch Wise Salary Summary Report' }
+                  name: `Salary_report_branch_print.xlsx`, sheet: { name: 'Salary Report Branch Print' }
                 });
               }
             }
